# nww

./: .env  APP_TOTAL_COMPLETE_FIX.md  APP_TOTAL_FIXES.md  CODE_GENERATION_SUMMARY.md  FINAL_FIXES_SUMMARY.md  FIXES_SUMMARY.md  README.md  README.txt  SYNTAX_ERROR_FIX.md  UI_DOCUMENTATION.md  UI_STRUCTURE_DIAGRAM.md  app_1.py  check_data.py  extract_keywords.py  fix_normalize.py  git.out  launch_ui.py  pyproject.toml  pytest.ini  requirements.txt  run_all.bat  run_api.ps1  run_api.sh  run_app_total.py  run_ui.py  run_ui_nww.py  test_nww.py  tmp_coerce_llm.py  tmp_make_map.py  tmp_norm_frames.py  tmp_stat.py  urls.live.txt  urls.txt
config/: alerts.yaml  checklists.yaml  experts.yaml  indicators.yaml  scenarios.yaml  scoring.yaml  sources.yaml  ui.yaml  weights.yaml
configs/: frame_map.auto.csv  frames.master.json
data/: actor_ranking.json  events.jsonl  relations.jsonl  sample_articles.jsonl
docs/: DevGuide_Windows.md  TESTING.md  UI_Guide.md
nwwpkg/: main.py
nwwpkg.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
rules/: checklist.csv  domain_override.json  weights.yaml
schema/: alerts.schema.yaml  frames.schema.yaml  kyw.schema.yaml  registry.yaml  scores.schema.yaml
scripts/: codegen_graphql.py  codegen_models.py  codegen_skeletons.py  codegen_ts.mjs
tests/: conftest.py
tools/: _quick_network.py  alerts.yaml  build_frames_rule.ps1  enrich_heuristic.py  eval_frames.py  frame_map_auto.py  frames_coerce_dicts.py  generate_frames.py  generate_rule_frames.py  ingest_from_urls.py  llm_enrich.py  llm_fill_from_rules.py  llm_frames.py  make_sample.ps1  (+15 more)
(+393 files in other folders)
